@@ -44,6 +44,7 @@ Version 0.6
 - rule templates properly work with submounts, subdomains and
   other rule factories now.
 - deprecated non-silent usage of the :class:`werkzeug.LimitedStream`.
+- added support for IRI handling to many parts of Werkzeug.
 
 Version 0.5.1
 -------------
